--- a/docker-compose-template.yaml
+++ b/docker-compose-template.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   eqtl_flask:
-    build: .
+    image: krrome/eqtlbrowser_docker
     ports:
       - "5000:80"
     environment:
@@ -11,5 +11,5 @@ services:
   eqtl_mongodb:
     image: "mongo:3.4.10"
     command: --dbpath /usr/share/mongo_data --wiredTigerEngineConfigString="cache_size=200MB"
-    volumes:
-     - /Users/roman/ebrowser/mongodb_new_data:/usr/share/mongo_data
+    #volumes:
+    # - /Users/roman/ebrowser/mongodb_new_data:/usr/share/mongo_data
