--- a/docker-compose-template.yaml
+++ b/docker-compose-template.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   full_ebrowser:
-    image: krrome/eqtlbrowser:3.4.10
+    image: krrome/eqtlbrowser:latest
     environment:
       - STATIC_PATH=/app/app/static
       - MONGO_HOST=127.0.0.1
